[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
sha3 = "0.10.8"
base64 = "0.22.1"
bitcoin = "0.32.2"
ethereum-types = "0.14.1"
secp256k1= "0.29.0"
hex = "0.4.3"
bs58 = "0.5.1"
common = {path="../common"}
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.127"
log = "0.4.22"