[package]
name = "data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.127"
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.87"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }