[package]
name = "data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
data-api-macro= {path="../data-api-macro"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
